fixed overflow x issue

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@
 
 body {
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .page > div {
